# asset-service

./: Dockerfile  README.md  conf.yml  file.py  kub1.yml  mongo_configuration.yaml  mypy.ini  package-lock.json  package.json  requirements-dev.txt  requirements.txt  secrets.py  serverless.yml  setup.cfg
.github/workflows/: build-mongo.yml  build.yml  pr.yml  pr_vulnerable_container.yml
data-transformations-utils/: aws-utils.js  common-utils.js  github-utils.js
data-transformations/Assets/: v10_update_is_protected_by_jit_chunk_3.js  v11_update_is_protected_by_jit_chunk_4.js  v12_update_is_protected_by_jit_chunk_5.js  v13_update_is_protected_by_jit_chunk_6.js  v14_NeuroBlade_middelware_have_permission_mark_as_not_active.js  v15_update_is_protected_by_jit_chunk_7.js  v16_delete_orphans_assets.js  v17_set_is_protected_by_jit_to_default_value.js  v18_add_ dummy_item_for_quicksight.js  v19_Neuroblade_sync_assets.js  v1_reactivate_aws_accounts.js  v20_Jit_sync_assets.js  v21_Neuroblade_sync_assets_fix.js  v22_Energi-ai_have_permission_mark_as_not_active.js  v23_jit_migrate_aws_assets_to_the_new_flow.js  v24_migrate_all_aws_assets_to_the_new_flow.js  v25_migrate_all_aws_assets_to_the_new_flow.js  v26_add_gsi4.js  v27_rerun_add_gsi4.js  v28_update_is_active_on_gsi4pk.js  v29_replace_gsi1_with_gsi4.js  v2_deactivate_all_tenant_assets_lumigo.js  v30_is_covered_false_for_crunchyroll.js  v31_add_archived_flag_for_github_repos_and_update_is_covered_accordingly.js  (+8 more)
docs/: index.md
service_mocks/: dockerfile-dev  dockerfile-test  mock-compose.yml  requirements-mock.txt
(+27 files in other folders)
