[metadata]
name = asset_service
version = 1.0.0
url = https://github.com/jitsecurity/asset-service
author = Jit
author_email = jit@jit.io

[options]
packages =
    asset_service
install_requires =
    pydantic>=1.8.2
    jit-utils[logger,requests,lambda_decorators,service_discovery,jit_aws_clients,event_models] @ git+ssh://git@github.com/jitsecurity/jit-utils.git@0.2.25#egg=jit-utils
python_requires = >=3.7
package_dir=
    =src

[options.package_data]
asset_service = py.typed

[flake8]
max-complexity = 10
statistics = True
count = True
max-line-length = 120


[tool:pytest]
addopts = -v --tb=short
env_files =
    .env/.pytest
